fix: mistake when title of photo being too large pushing rest of the content to the bottom

--- a/src/components/InformationBlock.css
+++ b/src/components/InformationBlock.css
@@ -4,6 +4,7 @@
 
 .information-block-info {
   display: block;
+  white-space: nowrap;
 }
 
 .information-block-label {
